add pagination & resetfilter

--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -1,5 +1,7 @@
 .table-1 {
   border: 1px solid #f2f4f5;
+  height: 80vh;
+  overflow: auto;
   table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
