--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -63,7 +63,10 @@
 .dl{
   display: flex;
 }
-
+.dl-col{
+  display: flex;
+  flex-direction: column;
+}
 .card-landing-custom{
   .ant-card-body{
     min-height: 200px;
@@ -72,4 +75,14 @@
     justify-content: space-between;
   }
   
+}
+
+.ant-menu-item-selected{
+background-color: unset !important;
+}
+
+.item-active-custom{
+  background-color: #1890ff;
+  color: white !important;
+  border-left: 5px solid #1774ca;
 }
