--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -98,10 +98,37 @@
     font-size: 35px;
     color: #1890ff;
     cursor: pointer;
-    &:active{
+    &:active {
       transform: translateY(6px);
       color: white;
-      transition: all .5s;
+      transition: all 0.5s;
     }
+  }
+}
+
+.group-notification {
+  min-height: 70vh;
+  padding: 1rem 1.5rem;
+  background: white;
+  border: 1px solid #ebedf0;
+  border-radius: 5px;
+}
+
+
+.btnPlay-container{
+  height: 100px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  background: #272822;
+  border-radius: 5px;
+  i{
+    color: white;
+    font-size: 1.5rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
