--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,6 +28,9 @@
 .mr-1 {
   margin-right: 1rem;
 }
+.mt-1{
+  margin-top: 1rem;
+}
 .modal-zoomImage {
   width: 700px !important;
   .ant-modal-body {
@@ -68,6 +71,9 @@
   display: flex;
   flex-direction: column;
 }
+.clickable{
+  cursor: pointer;
+}
 .card-landing-custom {
   .ant-card-body {
     min-height: 200px;
@@ -107,7 +113,9 @@
 }
 
 .group-notification {
-  min-height: 70vh;
+  max-height: 75vh;
+  overflow-y: auto;
+  min-height: 75vh;
   padding: 1rem 1.5rem;
   background: white;
   border: 1px solid #ebedf0;
@@ -131,4 +139,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+}
+
+.frame-stream{
+  width: 100%;
+  padding: 0 10px;
+  height: 100%;
 }
